// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddressBook component should renders correctly when addresses are not present 1`] = `
<div>
  <Styled(Row)
    fullBleed={true}
  >
    <Styled(Col)
      colSize={
        Object {
          "large": 12,
          "medium": 8,
          "small": 6,
        }
      }
    >
      <Styled(HeadingStyle)
        HeadingLarge="six"
        className="addressBook__separator"
        fontFamily="secondaryFontFamily"
        tag="h4"
      />
      <Styled(EmptyAddressList)
        labels={
          Object {
            "addressBook": Object {},
            "common": Object {},
          }
        }
      />
    </Styled(Col)>
  </Styled(Row)>
  <Styled(Row)
    className="addressBook__row--marginBottom"
    fullBleed={true}
  >
    <Styled(Col)
      className="addressBook__addNewCtaContainer"
      colSize={
        Object {
          "large": 10,
          "medium": 8,
          "small": 6,
        }
      }
    >
      <Styled(Button)
        buttonVariation="variable-width"
        data-locator="addressbook-addnewaddress"
        fill="BLUE"
        onClick={[Function]}
      />
    </Styled(Col)>
  </Styled(Row)>
  <Styled(Notification)
    colSize={
      Object {
        "large": 12,
        "medium": 8,
        "small": 6,
      }
    }
  />
  <Styled(DeleteAddressModal)
    data={
      Object {
        "buttons": Object {
          "cancel": undefined,
          "confirm": undefined,
        },
        "description": Object {},
        "heading": undefined,
        "msg": undefined,
        "title": undefined,
      }
    }
    labels={
      Object {
        "addressBook": Object {},
        "common": Object {},
      }
    }
  />
</div>
`;

exports[`AddressBook component should renders correctly when addresses are present 1`] = `
<div>
  <Styled(Row)
    fullBleed={true}
  >
    <Styled(Col)
      colSize={
        Object {
          "large": 12,
          "medium": 8,
          "small": 6,
        }
      }
    >
      <Styled(HeadingStyle)
        HeadingLarge="six"
        className="addressBook__separator"
        fontFamily="secondaryFontFamily"
        tag="h4"
      />
    </Styled(Col)>
  </Styled(Row)>
  <Styled(Row)
    className="addressBook__row--marginBottom"
    fullBleed={true}
  >
    <Styled(Col)
      className="addressBook__addNewCtaContainer"
      colSize={
        Object {
          "large": 10,
          "medium": 8,
          "small": 6,
        }
      }
    >
      <Styled(Button)
        buttonVariation="variable-width"
        data-locator="addressbook-addnewaddress"
        fill="BLUE"
        onClick={[Function]}
      />
    </Styled(Col)>
  </Styled(Row)>
  <Styled(Notification)
    colSize={
      Object {
        "large": 12,
        "medium": 8,
        "small": 6,
      }
    }
  />
  <Styled(AddressList)
    addresses={
      Immutable.List [
        Object {
          "addressLine": Array [
            "addressline 1",
            "addressline 2",
          ],
          "city": "test city",
          "country": "test country",
          "firstName": "test",
          "lastName": "test",
          "phone1": "1234567890",
        },
      ]
    }
    labels={
      Object {
        "addressBook": Object {},
        "common": Object {},
      }
    }
    setSelectedAddress={[Function]}
  />
  <Styled(DeleteAddressModal)
    data={
      Object {
        "buttons": Object {
          "cancel": undefined,
          "confirm": undefined,
        },
        "description": Object {},
        "heading": undefined,
        "msg": undefined,
        "title": undefined,
      }
    }
    labels={
      Object {
        "addressBook": Object {},
        "common": Object {},
      }
    }
  />
</div>
`;
